# PS-HAKUTAKU

./: README.md
hakutaku-mvp/: .env.example  .gitignore  CLAUDE.md  README.md
hakutaku-mvp/backend/: .env.example  pyproject.toml
hakutaku-mvp/backend/scripts/: demo_learning.py  diag_idle_timeout.py  diag_truncate.py  run_extraction.py  run_full_pipeline.py
hakutaku-mvp/backend/src/hakutaku/: __init__.py  config.py
hakutaku-mvp/backend/src/hakutaku/adapters/: __init__.py  base.py  chat.py  meeting.py
hakutaku-mvp/backend/src/hakutaku/api/: __init__.py  main.py  schemas.py
hakutaku-mvp/backend/src/hakutaku/extraction/: __init__.py  extractor.py
hakutaku-mvp/backend/src/hakutaku/graph/: __init__.py  ingester.py  repository.py
hakutaku-mvp/backend/src/hakutaku/llm/: __init__.py  client.py  prompts.py
hakutaku-mvp/backend/src/hakutaku/memory/: __init__.py  context_retriever.py  cross_linker.py  entity_resolver.py
hakutaku-mvp/backend/src/hakutaku/proposals/: __init__.py  generator.py
hakutaku-mvp/backend/src/hakutaku/reasoning/: __init__.py  detectors.py  orchestrator.py
hakutaku-mvp/backend/src/hakutaku/schemas/: __init__.py  entities.py  events.py  extraction.py  proposals.py  relations.py
hakutaku-mvp/data/inputs/: chat_25-29-03.txt  meeting_01_24-03.txt  meeting_02_28-03.txt
hakutaku-mvp/docs/: ARCHITECTURE.md  DECISIONS.md  FINAL_REPORT.md  PROMPTING.md  SPEC.md
hakutaku-mvp/frontend/: package-lock.json
hakutaku-mvp/prompts/: answers_question.yaml  entity_resolution.yaml  extraction.yaml  proposals.yaml  reasoning.yaml
(+5 files in other folders)
