[project]
name = "hakutaku"
version = "0.1.0"
description = "Hakutaku — Organizational Intelligence Layer (MVP)"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hakutaku" }]

dependencies = [
    # LLM clients
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "instructor>=1.6.0",

    # Data modeling
    "pydantic>=2.8",
    "pydantic-settings>=2.4",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "supabase>=2.8.0",
    "psycopg[binary]>=3.2.0",

    # Utils
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",

    # Graph viz (Fase 3 — debug)
    "pyvis>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hakutaku"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
